# ImageOCL

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  ImageOCL.cpp  ImageOCL.h  OpenCL.cpp  OpenCL.h  main.cpp
test/: CMakeLists.txt  test_devices.cpp  test_main.cpp
test/dependencies/gtest/lib/Release/: gtest.lib
